--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
         <df-messenger
           intent="WELCOME"
-          chat-title="EklavyaMain"
+          expand="true"
+          chat-title="Eklavya"
           agent-id="bf78150d-c7c2-495c-8ec6-561cd817eab3"
           language-code="en"
         ></df-messenger>
